# insights-mcp-evaluation

./: .gitignore  INSIGHTS_TOOLSETS.md  Makefile  README.md  pyproject.toml
agent/: __init__.py  evaluator.py  llm_client.py  main.py  mcp_stdio.py  registry.py
scripts/: smoke.sh
tests/: cases.jsonl
